--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="main.js"></script>
   <title><PROJECT-1></PROJECT-1></title>
 </head>
 <body>
-  <h1>SPACE INVADERS</h1>
+  <button class="button">START</button>
+  <div class="grid"></div>
 </body>
 </html>
