lifes are removed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
   <title><PROJECT-1></PROJECT-1></title>
 </head>
 <body>
+  <main>
+  <article>
   <button class="button">START</button>
+  <div class="lifes">
+    <div class="cellLifes ship"></div>
+    <div class="cellLifes ship"></div>
+    <div class="cellLifes ship"></div>
+  </div>
+</article>
+<article>  
   <div class="grid"></div>
+</article>
+</main>
 </body>
 </html>
