--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <main>
+    <audio id='audio'></audio>
   <article>
   <button class="button">START</button>
   <div class="lifes">
