victory and game over done

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Londrina+Shadow&display=swap" rel="stylesheet">
+
+
   <link rel="stylesheet" href="style.css">
   <script src="main.js"></script>
   <title><PROJECT-1></PROJECT-1></title>
@@ -10,7 +13,7 @@
 <body>
   <main>
     <audio id='audio'></audio>
-  <article>
+  <article class="miniGrid">
   <button class="button">START</button>
   <div class="lifes">
     <div class="cellLifes ship"></div>
@@ -22,6 +25,12 @@
   <div class="grid"></div>
 </article>
 </main>
-<div class="hidden">HELLO WORLD</div>
+<div class="gameOver">
+  <h1>GAME OVER</h1>
+  <div style="width:100%;height:0;padding-bottom:49%;position:relative;"><iframe src="https://giphy.com/embed/3mJpUsob9DDKukZVNA" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/CBSAllAccess-star-trek-3mJpUsob9DDKukZVNA">via GIPHY</a></p>
+</div>
+<div class="hidden">
+  <h1>VICTORY</h1>
+  <div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/Url7EVhtMwyT6" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/film-independence-day-independencedayedit-Url7EVhtMwyT6">via GIPHY</a></p></div>
 </body>
 </html>
