--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Krona+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Londrina+Shadow&display=swap" rel="stylesheet">
 
 
@@ -13,8 +14,10 @@
 <body>
   <main>
     <audio id='audio'></audio>
+    <audio id='music'></audio>
   <article class="miniGrid">
   <button class="button">START</button>
+  <h2>LIFES</h2>
   <div class="lifes">
     <div class="cellLifes ship"></div>
     <div class="cellLifes ship"></div>
@@ -25,6 +28,18 @@
   <div class="grid"></div>
 </article>
 </main>
+<h3 class="display">11</h3>
+<div class="startScreen">
+  <article>
+    <h1>SPACE Z</h1>
+    <p>Are you ready to save the planet earth?</p>
+    <p>You wil be the capitan of the ROCINANTE spacecraft, your mission is to kill all the invaders that are attempting to destroy the planet. THE EARTH COUNT ON YOU!</p>
+    <p>Shoot you powerful laser with 'spacebar', and move the ROCINANTE with the arrows left and right</p> 
+  </article>
+  <article>
+  <button id="letsGo">LET'S GO!</button>
+</article>
+</div>
 <div class="gameOver">
   <h1>GAME OVER</h1>
   <div style="width:100%;height:0;padding-bottom:49%;position:relative;"><iframe src="https://giphy.com/embed/3mJpUsob9DDKukZVNA" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/CBSAllAccess-star-trek-3mJpUsob9DDKukZVNA">via GIPHY</a></p>
