play again button added

--- a/index.html
+++ b/index.html
@@ -42,10 +42,14 @@
 </div>
 <div class="gameOver">
   <h1>GAME OVER</h1>
-  <div style="width:100%;height:0;padding-bottom:49%;position:relative;"><iframe src="https://giphy.com/embed/3mJpUsob9DDKukZVNA" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/CBSAllAccess-star-trek-3mJpUsob9DDKukZVNA">via GIPHY</a></p>
+  <div style="width:100%;height:0;padding-bottom:49%;position:relative;"><iframe src="https://giphy.com/embed/3mJpUsob9DDKukZVNA" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+  <button id="playAgain" onClick="window.location.reload();">PLAY AGAIN</button>
 </div>
 <div class="hidden">
   <h1>VICTORY</h1>
-  <div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/Url7EVhtMwyT6" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/film-independence-day-independencedayedit-Url7EVhtMwyT6">via GIPHY</a></p></div>
+  <div style="width:100%;height:0;padding-bottom:100%;position:relative;"><iframe src="https://giphy.com/embed/Url7EVhtMwyT6" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><button id="playAgain" onClick="window.location.reload();">PLAY AGAIN</button>
+  
+</div>
+
 </body>
 </html>
