--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link href="https://fonts.googleapis.com/css?family=Londrina+Shadow&display=swap" rel="stylesheet">
 
 
-  <link rel="stylesheet" href="style.css">
-  <script src="main.js"></script>
+  <link rel="stylesheet" href="./css/style.css">
+  <script src="./js/main.js"></script>
   <title><PROJECT-1></PROJECT-1></title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     <audio id='audio'></audio>
     <audio id='music'></audio>
   <article class="miniGrid">
-  <button class="button">START</button>
+  <!-- <button class="button">START</button> -->
   <h2>LIFES</h2>
   <div class="lifes">
     <div class="cellLifes ship"></div>
@@ -37,7 +37,7 @@
     <p>Shoot you powerful laser with 'spacebar', and move the ROCINANTE with the arrows left and right</p> 
   </article>
   <article>
-  <button id="letsGo">LET'S GO!</button>
+  <button id="letsGo">START</button>
 </article>
 </div>
 <div class="gameOver">
