--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
   <link rel="stylesheet" href="./css/style.css">
   <script src="./js/main.js"></script>
-  <title><PROJECT-1></PROJECT-1></title>
+  <title>SPACE Z</title>
+  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <main>
